Connected DIDs Status
