# gen/js/proto/imp/api/core/core_pb.js
@@ -19,6 +19,7 @@ var google_api_annotations_pb = require('../../../../google/api/annotations_pb.j
 goog.object.extend(proto, google_api_annotations_pb);
 var protoc$gen$openapiv2_options_annotations_pb = require('../../../../protoc-gen-openapiv2/options/annotations_pb.js');
 goog.object.extend(proto, protoc$gen$openapiv2_options_annotations_pb);
+goog.exportSymbol('proto.core.CommunicationStatus', null, global);
 goog.exportSymbol('proto.core.KeyStatus', null, global);
 goog.exportSymbol('proto.core.LightningStatus', null, global);
 goog.exportSymbol('proto.core.NodeStatus', null, global);
@@ -107,6 +108,27 @@ if (goog.DEBUG && !COMPILED) {
    * @override
    */
   proto.core.LightningStatus.displayName = 'proto.core.LightningStatus';
+}
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.core.CommunicationStatus = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, proto.core.CommunicationStatus.repeatedFields_, null);
+};
+goog.inherits(proto.core.CommunicationStatus, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  /**
+   * @public
+   * @override
+   */
+  proto.core.CommunicationStatus.displayName = 'proto.core.CommunicationStatus';
 }
 /**
  * Generated by JsPbCodeGenerator.
@@ -681,6 +703,162 @@ proto.core.LightningStatus.prototype.clearNodeStatusListList = function() {
 
 
 
+/**
+ * List of repeated fields within this message type.
+ * @private {!Array<number>}
+ * @const
+ */
+proto.core.CommunicationStatus.repeatedFields_ = [1];
+
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * Optional fields that are not set will be set to undefined.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     net/proto2/compiler/js/internal/generator.cc#kKeyword.
+ * @param {boolean=} opt_includeInstance Deprecated. whether to include the
+ *     JSPB instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.core.CommunicationStatus.prototype.toObject = function(opt_includeInstance) {
+  return proto.core.CommunicationStatus.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Deprecated. Whether to include
+ *     the JSPB instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.core.CommunicationStatus} msg The msg instance to transform.
+ * @return {!Object}
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.core.CommunicationStatus.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    websocketConnectionsList: (f = jspb.Message.getRepeatedField(msg, 1)) == null ? undefined : f
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.core.CommunicationStatus}
+ */
+proto.core.CommunicationStatus.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.core.CommunicationStatus;
+  return proto.core.CommunicationStatus.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.core.CommunicationStatus} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.core.CommunicationStatus}
+ */
+proto.core.CommunicationStatus.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.addWebsocketConnections(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.core.CommunicationStatus.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  proto.core.CommunicationStatus.serializeBinaryToWriter(this, writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the given message to binary data (in protobuf wire
+ * format), writing to the given BinaryWriter.
+ * @param {!proto.core.CommunicationStatus} message
+ * @param {!jspb.BinaryWriter} writer
+ * @suppress {unusedLocalVariables} f is only used for nested messages
+ */
+proto.core.CommunicationStatus.serializeBinaryToWriter = function(message, writer) {
+  var f = undefined;
+  f = message.getWebsocketConnectionsList();
+  if (f.length > 0) {
+    writer.writeRepeatedString(
+      1,
+      f
+    );
+  }
+};
+
+
+/**
+ * repeated string websocket_connections = 1;
+ * @return {!Array<string>}
+ */
+proto.core.CommunicationStatus.prototype.getWebsocketConnectionsList = function() {
+  return /** @type {!Array<string>} */ (jspb.Message.getRepeatedField(this, 1));
+};
+
+
+/**
+ * @param {!Array<string>} value
+ * @return {!proto.core.CommunicationStatus} returns this
+ */
+proto.core.CommunicationStatus.prototype.setWebsocketConnectionsList = function(value) {
+  return jspb.Message.setField(this, 1, value || []);
+};
+
+
+/**
+ * @param {string} value
+ * @param {number=} opt_index
+ * @return {!proto.core.CommunicationStatus} returns this
+ */
+proto.core.CommunicationStatus.prototype.addWebsocketConnections = function(value, opt_index) {
+  return jspb.Message.addToRepeatedField(this, 1, value, opt_index);
+};
+
+
+/**
+ * Clears the list making it empty but non-null.
+ * @return {!proto.core.CommunicationStatus} returns this
+ */
+proto.core.CommunicationStatus.prototype.clearWebsocketConnectionsList = function() {
+  return this.setWebsocketConnectionsList([]);
+};
+
+
+
 
 
 if (jspb.Message.GENERATE_TO_OBJECT) {
@@ -713,7 +891,8 @@ proto.core.StatusResponse.prototype.toObject = function(opt_includeInstance) {
 proto.core.StatusResponse.toObject = function(includeInstance, msg) {
   var f, obj = {
     keyStatus: (f = msg.getKeyStatus()) && proto.core.KeyStatus.toObject(includeInstance, f),
-    lightningStatus: (f = msg.getLightningStatus()) && proto.core.LightningStatus.toObject(includeInstance, f)
+    lightningStatus: (f = msg.getLightningStatus()) && proto.core.LightningStatus.toObject(includeInstance, f),
+    communicationStatus: (f = msg.getCommunicationStatus()) && proto.core.CommunicationStatus.toObject(includeInstance, f)
   };
 
   if (includeInstance) {
@@ -760,6 +939,11 @@ proto.core.StatusResponse.deserializeBinaryFromReader = function(msg, reader) {
       reader.readMessage(value,proto.core.LightningStatus.deserializeBinaryFromReader);
       msg.setLightningStatus(value);
       break;
+    case 3:
+      var value = new proto.core.CommunicationStatus;
+      reader.readMessage(value,proto.core.CommunicationStatus.deserializeBinaryFromReader);
+      msg.setCommunicationStatus(value);
+      break;
     default:
       reader.skipField();
       break;
@@ -803,6 +987,14 @@ proto.core.StatusResponse.serializeBinaryToWriter = function(message, writer) {
       2,
       f,
       proto.core.LightningStatus.serializeBinaryToWriter
+    );
+  }
+  f = message.getCommunicationStatus();
+  if (f != null) {
+    writer.writeMessage(
+      3,
+      f,
+      proto.core.CommunicationStatus.serializeBinaryToWriter
     );
   }
 };
@@ -879,6 +1071,43 @@ proto.core.StatusResponse.prototype.clearLightningStatus = function() {
  */
 proto.core.StatusResponse.prototype.hasLightningStatus = function() {
   return jspb.Message.getField(this, 2) != null;
+};
+
+
+/**
+ * optional CommunicationStatus communication_status = 3;
+ * @return {?proto.core.CommunicationStatus}
+ */
+proto.core.StatusResponse.prototype.getCommunicationStatus = function() {
+  return /** @type{?proto.core.CommunicationStatus} */ (
+    jspb.Message.getWrapperField(this, proto.core.CommunicationStatus, 3));
+};
+
+
+/**
+ * @param {?proto.core.CommunicationStatus|undefined} value
+ * @return {!proto.core.StatusResponse} returns this
+*/
+proto.core.StatusResponse.prototype.setCommunicationStatus = function(value) {
+  return jspb.Message.setWrapperField(this, 3, value);
+};
+
+
+/**
+ * Clears the message field making it undefined.
+ * @return {!proto.core.StatusResponse} returns this
+ */
+proto.core.StatusResponse.prototype.clearCommunicationStatus = function() {
+  return this.setCommunicationStatus(undefined);
+};
+
+
+/**
+ * Returns whether this field is set.
+ * @return {boolean}
+ */
+proto.core.StatusResponse.prototype.hasCommunicationStatus = function() {
+  return jspb.Message.getField(this, 3) != null;
 };
 
 
