# gen/openapiv2/proto/imp/api/core/core.swagger.json
@@ -50,6 +50,17 @@
     }
   },
   "definitions": {
+    "coreCommunicationStatus": {
+      "type": "object",
+      "properties": {
+        "websocketConnections": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "coreKeyStatus": {
       "type": "object",
       "properties": {
@@ -88,6 +99,9 @@
         },
         "lightningStatus": {
           "$ref": "#/definitions/coreLightningStatus"
+        },
+        "communicationStatus": {
+          "$ref": "#/definitions/coreCommunicationStatus"
         }
       },
       "description": "*\nRepresents a response back from a status request."
